[package]
name = "bevy-spritesheet-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"

[[example]]
name = "simple_animation"
path = "examples/simple_animation.rs"

[[example]]
name = "animation_graph"
path = "examples/animation_graph.rs"
